--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <div>
+      <section></section>
 
         <!-- Wrap the nested video content below with figure tags -->
         <div>
@@ -64,7 +64,7 @@
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
           <span>Exceptional Promotional Video - Source: archive.org</span>
         </div>
-      </div>
+      
 
       <!-- Replace this div with a third section tag -->
       <div>
