automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
           </figure>
 
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
-          <span>Exceptional Promotional Video - Source: archive.org</span>
+          <figcaption>Exceptional Promotional Video - Source: archive.org</figcaption>
        
       
 
       <!-- Replace this div with a third section tag -->
-      <div>
+      <section>
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
@@ -82,8 +82,8 @@
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
-      </div>
-    </div>
+      </section>
+   
     <!-- End of main part of webpage -->
 
     <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
