automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
   
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <section></section>
+      <section>
+        <h2></h2>
+      </section>
 
         <!-- Wrap the nested video content below with figure tags -->
         <figure>
@@ -87,7 +89,7 @@
     <!-- End of main part of webpage -->
 
     <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
-    <div>
+    <footer>
       <h3>Contact</h3>
       <p>
         email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
