automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         phone: +1 710 555 1234
       </p>
       <h3>Correspondence</h3>
+      </footer>
 
       <!-- Use the address tag to contain the following address-->
       <div>
