--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
       </footer>
 
       <!-- Use the address tag to contain the following address-->
-      <div>
+      <address>
         Exceptional Realty<br>
         P.O.Box 5555<br>
         Brooklyn, NY 11201
-      </div>
+      </address>
 
       <!-- Replace the following div with a details tag -->
       <div>
