--- a/index.html
+++ b/index.html
@@ -106,12 +106,11 @@
       </address>
 
       <!-- Replace the following div with a details tag -->
-      <div>
+      <details>
         <!-- Replace the following span with a summary tag -->
-        <span>&copy; 2014 Exceptional Realty.</span>
+        <summary>&copy; 2014 Exceptional Realty.</summary>
         <p>All Rights Reserved.</p>
-      </div>
-    </div>
+     
 
   </body>
 </html>
