--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <!-- Replace the following span with a summary tag -->
         <summary>&copy; 2014 Exceptional Realty.</summary>
         <p>All Rights Reserved.</p>
+        </details>
      
   </body>
 </html>
