--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 
     <!-- Use a header tag to wrap the h1 and h2 tags instead of a div-->
-  
+  <article> </article>
       <header>
       <h1>Exceptional Header</h1>
       <h2>Really, it is a great header</h2>
