--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
-    <main>   <!-- All the main content of a web page goes here -->
-    </main>
+    <main>   <!-- All the main content of a web page goes here --></main>
+    
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <section></section>
