automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
-    <main>   <!-- All the main content of a web page goes here --></main>
+    <main>   <!-- All the main content of a web page goes here -->
     
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
@@ -85,6 +85,7 @@
       </section>
    
     <!-- End of main part of webpage -->
+    </main>
 
     <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
     <footer>
