--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <section>
+      <aside>
         <h2></h2>
-      </section>
+      </aside>
 
         <!-- Wrap the nested video content below with figure tags -->
         <figure>
