automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <aside>
+      <section>
     
-      </aside>
+      </section>
 
         <!-- Wrap the nested video content below with figure tags -->
         <figure>
