automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
-      <section></section>
+      <section>
 
         <!-- Wrap the nested img in a figure tag-->
         <figure>
@@ -46,7 +46,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
          
         </article>
-  
+  </section>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
       <section>
